--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
 <div class="phone"><p>9999999999</p></div>
 <div class="email"><p>ritubhurat18@gmail.com</p></div>
 <div class="del"><a href="#">Delete</a></div>
+	
+div class="name"><p>Shivani Gupta</p></div>
+<div class="phone"><p>9876543981</p></div>
+<div class="email"><p>shivgupta@gmail.com</p></div>
+<div class="del"><a href="#">Delete</a></div>
 
 </div>
 </div>
